--- a/korea.assembly.go.kr/995f1461145d6ba4a4006dd8a84f4ce6a1b18123.html
+++ b/korea.assembly.go.kr/995f1461145d6ba4a4006dd8a84f4ce6a1b18123.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/sjpark580801" target="_blank">http://blog.naver.com/sjpark580801</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/sjpark580801" target="_blank">http://blog.naver.com/sjpark580801</a></td>
 						</tr>
 					</tbody>
 				</table>
