--- a/korea.assembly.go.kr/ee8da94532beda8d54ba61f20070987ee443b69e.html
+++ b/korea.assembly.go.kr/ee8da94532beda8d54ba61f20070987ee443b69e.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/suns998" target="_blank">http://blog.naver.com/suns998</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/suns998" target="_blank">http://blog.naver.com/suns998</a></td>
 						</tr>
 					</tbody>
 				</table>
