--- a/korea.assembly.go.kr/992f7697a08a9c00195e19f0b2807afdefe74f2b.html
+++ b/korea.assembly.go.kr/992f7697a08a9c00195e19f0b2807afdefe74f2b.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/withwanju/" target="_blank">http://blog.naver.com/withwanju/</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/withwanju/" target="_blank">http://blog.naver.com/withwanju/</a></td>
 						</tr>
 					</tbody>
 				</table>
