--- a/korea.assembly.go.kr/0a58426c4a80ab0b99c9a50f1e397dd15459412e.html
+++ b/korea.assembly.go.kr/0a58426c4a80ab0b99c9a50f1e397dd15459412e.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
