--- a/korea.assembly.go.kr/e916a872300928bd38b199a669a8a2aa58640148.html
+++ b/korea.assembly.go.kr/e916a872300928bd38b199a669a8a2aa58640148.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
