--- a/korea.assembly.go.kr/89e5a64a29beaf79061b0b0454da91d60eb7c7c0.html
+++ b/korea.assembly.go.kr/89e5a64a29beaf79061b0b0454da91d60eb7c7c0.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://pyotal.site/" target="_blank">http://pyotal.site/</a></td>
+							<td style="word-break:break-all;"><a href="http://pyotal.site/" target="_blank">http://pyotal.site/</a></td>
 						</tr>
 					</tbody>
 				</table>
