--- a/korea.assembly.go.kr/ca352d1865c0093ce2df8f93f9f040b68141cc56.html
+++ b/korea.assembly.go.kr/ca352d1865c0093ce2df8f93f9f040b68141cc56.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
