--- a/korea.assembly.go.kr/01166f752a1edf38d1cef84599b3ae1cd695381c.html
+++ b/korea.assembly.go.kr/01166f752a1edf38d1cef84599b3ae1cd695381c.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/youngkyos" target="_blank">http://blog.naver.com/youngkyos</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/youngkyos" target="_blank">http://blog.naver.com/youngkyos</a></td>
 						</tr>
 					</tbody>
 				</table>
