--- a/korea.assembly.go.kr/ec58395fffd69175488f68f619d529da55815ef8.html
+++ b/korea.assembly.go.kr/ec58395fffd69175488f68f619d529da55815ef8.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.cleanshim.com" target="_blank">http://www.cleanshim.com</a></td>
+							<td style="word-break:break-all;"><a href="http://www.cleanshim.com" target="_blank">http://www.cleanshim.com</a></td>
 						</tr>
 					</tbody>
 				</table>
