--- a/korea.assembly.go.kr/e0c8db160604286755af7af0ccdb35ee8810d9f5.html
+++ b/korea.assembly.go.kr/e0c8db160604286755af7af0ccdb35ee8810d9f5.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/kjsim1304" target="_blank">http://blog.naver.com/kjsim1304</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/kjsim1304" target="_blank">http://blog.naver.com/kjsim1304</a></td>
 						</tr>
 					</tbody>
 				</table>
