--- a/korea.assembly.go.kr/55e38ffbf49ad20b4cfb260c218d9674f701faaf.html
+++ b/korea.assembly.go.kr/55e38ffbf49ad20b4cfb260c218d9674f701faaf.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
