--- a/korea.assembly.go.kr/5e0478ed66dcde447bd252a89784df3fc0e60ce2.html
+++ b/korea.assembly.go.kr/5e0478ed66dcde447bd252a89784df3fc0e60ce2.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
